browser/metro/theme/browser.css
/* ... */
#
tabs
>
.
tabs
-
scrollbox
>
.
scrollbutton
-
up
{
list
-
style
-
image
:
url
(
"
images
/
tab
-
arrows
.
png
"
)
!
important
;
-
moz
-
image
-
region
:
rect
(
15px
58px
63px
14px
)
!
important
;
}
#
tabs
>
.
tabs
-
scrollbox
>
.
scrollbutton
-
up
:
hover
{
-
moz
-
image
-
region
:
rect
(
14px
102px
62px
58px
)
!
important
;
}
#
tabs
>
.
tabs
-
scrollbox
>
.
scrollbutton
-
up
:
active
{
-
moz
-
image
-
region
:
rect
(
14px
152px
62px
108px
)
!
important
;
}
#
tabs
>
.
tabs
-
scrollbox
>
.
scrollbutton
-
up
[
disabled
]
{
-
moz
-
image
-
region
:
rect
(
15px
196px
63px
152px
)
!
important
;
}
#
tabs
>
.
tabs
-
scrollbox
>
.
scrollbutton
-
down
{
list
-
style
-
image
:
url
(
"
images
/
tab
-
arrows
.
png
"
)
!
important
;
-
moz
-
image
-
region
:
rect
(
73px
58px
121px
14px
)
!
important
;
}
#
tabs
>
.
tabs
-
scrollbox
>
.
scrollbutton
-
down
:
hover
{
-
moz
-
image
-
region
:
rect
(
72px
102px
120px
58px
)
!
important
;
}
#
tabs
>
.
tabs
-
scrollbox
>
.
scrollbutton
-
down
:
active
{
-
moz
-
image
-
region
:
rect
(
72px
152px
120px
108px
)
!
important
;
}
#
tabs
>
.
tabs
-
scrollbox
>
.
scrollbutton
-
down
[
disabled
]
{
-
moz
-
image
-
region
:
rect
(
73px
196px
121px
152px
)
!
important
;
}
#
tabs
-
container
[
viewstate
=
"
snapped
"
]
{
visibility
:
hidden
;
}
-
moz
-
keyframes
open
-
documenttab
{
0
%
{
opacity
:
0
;
transform
:
scale
(
0
0
)
;
}
100
%
{
opacity
:
1
;
transform
:
scale
(
1
1
)
;
}
}
-
moz
-
keyframes
close
-
documenttab
{
0
%
{
opacity
:
1
;
transform
:
scale
(
1
1
)
;
}
100
%
{
opacity
:
0
;
transform
:
scale
(
0
0
)
;
}
}
.
documenttab
-
container
{
animation
:
open
-
documenttab
0
.
4s
ease
-
out
;
}
documenttab
[
closing
]
>
.
documenttab
-
container
{
animation
:
close
-
documenttab
0
.
4s
ease
-
out
;
animation
-
fill
-
mode
:
forwards
;
}
.
documenttab
-
favicon
{
visibility
:
collapse
;
}
.
documenttab
-
thumbnail
{
margin
:
metro_spacing_normal
metro_spacing_snormal
;
background
:
white
none
center
top
no
-
repeat
;
background
-
size
:
cover
;
width
:
thumbnail_width
;
height
:
thumbnail_height
;
}
.
documenttab
-
title
{
margin
:
metro_spacing_normal
metro_spacing_snormal
;
margin
-
top
:
0
;
font
-
size
:
metro_font_normal
;
width
:
thumbnail_width
;
padding
:
4px
metro_spacing_snormal
8px
;
background
:
#
000
;
opacity
:
0
.
95
;
color
:
#
fff
;
box
-
shadow
:
0
0
metro_spacing_snormal
rgba
(
0
0
0
0
.
25
)
;
}
.
documenttab
-
crop
{
background
:
transparent
url
(
"
chrome
:
/
/
browser
/
skin
/
images
/
tab
-
crop
.
png
"
)
50
%
50
%
no
-
repeat
;
}
.
documenttab
-
selection
{
background
:
transparent
-
moz
-
image
-
rect
(
url
(
"
chrome
:
/
/
browser
/
skin
/
images
/
tab
-
overlay
.
png
"
)
0
%
100
%
50
%
0
%
)
50
%
50
%
no
-
repeat
;
}
documenttab
[
selected
]
.
documenttab
-
selection
{
background
:
transparent
-
moz
-
image
-
rect
(
url
(
"
chrome
:
/
/
browser
/
skin
/
images
/
tab
-
overlay
.
png
"
)
50
%
100
%
100
%
0
%
)
50
%
50
%
no
-
repeat
;
}
.
documenttab
-
close
{
background
:
none
!
important
;
padding
:
metro_spacing_small
!
important
;
margin
-
top
:
metro_spacing_snormal
;
-
moz
-
margin
-
end
:
metro_spacing_xsmall
;
border
-
color
:
transparent
!
important
;
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
images
/
closetab
-
default
.
png
"
)
;
}
.
documenttab
-
close
>
.
button
-
box
>
.
button
-
text
{
display
:
none
;
}
#
tabs
-
controls
{
margin
-
top
:
metro_spacing_small
;
-
moz
-
box
-
align
:
start
;
-
moz
-
box
-
orient
:
vertical
;
padding
:
0
metro_spacing_small
;
}
#
tabs
-
controls
toolbarbutton
{
margin
:
toolbar_vertical_spacing
toolbar_horizontal_spacing
;
}
#
newtab
-
button
{
list
-
style
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
images
/
newtab
-
default
.
png
)
;
}
#
page
.
selection
-
overlay
{
-
moz
-
stack
-
sizing
:
ignore
;
}
.
selection
-
overlay
{
pointer
-
events
:
none
;
}
.
selection
-
overlay
:
-
moz
-
focusring
{
outline
:
0
!
important
;
}
.
selection
-
overlay
-
hidden
{
display
:
none
;
}
.
selectionhandle
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
images
/
selection
-
monocle
.
png
"
)
;
border
:
0px
solid
gray
;
padding
:
0px
;
margin
-
top
:
-
30px
;
margin
-
left
:
-
18px
;
pointer
-
events
:
auto
;
}
#
toolbar
{
background
-
color
:
panel_light_color
;
}
#
toolbar
>
#
back
-
button
{
list
-
style
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
images
/
appbar
-
back
.
png
)
;
position
:
relative
;
z
-
index
:
1
;
transition
:
opacity
forward_transition_length
ease
-
out
;
}
#
toolbar
>
#
back
-
button
[
disabled
]
{
visibility
:
visible
;
opacity
:
0
.
5
;
}
#
toolbar
>
#
forward
-
button
{
list
-
style
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
images
/
appbar
-
forward
.
png
)
;
transition
:
margin
forward_transition_length
ease
-
out
visibility
forward_transition_length
ease
-
out
opacity
forward_transition_length
ease
-
out
;
}
#
toolbar
>
#
forward
-
button
[
disabled
]
{
-
moz
-
margin
-
start
:
-
forward_spacing
;
visibility
:
hidden
;
opacity
:
0
;
pointer
-
events
:
none
;
}
media
(
min
-
resolution
:
130dpi
)
{
#
toolbar
>
#
back
-
button
{
list
-
style
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
images
/
appbar
-
back
1
.
4x
.
png
)
;
}
#
toolbar
>
#
forward
-
button
{
list
-
style
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
images
/
appbar
-
forward
1
.
4x
.
png
)
;
}
}
#
urlbar
-
container
{
border
:
metro_border_thick
solid
urlbar_border_color
;
margin
:
0
toolbar_horizontal_spacing
;
padding
:
0
;
background
-
color
:
field_background_color
;
overflow
:
hidden
;
}
#
urlbar
-
container
[
mode
=
"
edit
"
]
{
border
-
color
:
metro_orange
;
}
#
identity
-
icon
{
margin
:
0
;
padding
:
0
metro_spacing_snormal
;
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
images
/
identity
-
icons
-
generic
.
png
"
)
;
}
#
identity
-
box
-
inner
.
verifiedDomain
>
#
identity
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
images
/
identity
-
icons
-
https
.
png
"
)
;
}
/* ... */

